public class DefenseEvolution {
    /* TODO : Evolution des défenses (Itération 5) */
}
